--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,24 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.11.0</version>
 		</dependency>
+		<dependency>
+
+			<groupId>org.apache.logging.log4j</groupId>
+
+			<artifactId>log4j-core</artifactId>
+
+			<version>2.19.0</version>
+
+		</dependency>
+		<dependency>
+
+			<groupId>org.apache.logging.log4j</groupId>
+
+			<artifactId>log4j-api</artifactId>
+
+			<version>2.19.0</version>
+
+		</dependency>
 	</dependencies>
 
 	<build>
